added comment inthe surya prakash branch

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>17</java.version>
 	</properties>
 	<!-- hi iam sandeep-->
+	<!-- hi iam sarathi-->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
